Failure to launch #122977

Closed
opened 2024-06-09 23:00:32 +02:00 by Ahmed · 9 comments

System Information
Operating system: Win 10
Graphics card: NVidia GeForce GT 525M

Blender Version
Broken: (Blender 4.2.0 Alpha, '1c92d26bfc8d', 2024-6-5)
Worked: (Blender 4.2.0 Alpha, 'ffa363355db4', 2024-6-4)

Short description of error
Crashes on opening

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
I download the ZIP file from ( https://builder.blender.org/download/daily/ ) and extract it on my laptop
I open the extracted folder and click on either (blender.exe) or (blender-launcher.exe)
Blender then seems to start the loading screen then crashes.
No error message or anything.

Bug reports are attached.

**System Information** Operating system: Win 10 Graphics card: NVidia GeForce GT 525M **Blender Version** Broken: (Blender 4.2.0 Alpha, '1c92d26bfc8d', 2024-6-5) Worked: (Blender 4.2.0 Alpha, 'ffa363355db4', 2024-6-4) **Short description of error** Crashes on opening **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). I download the ZIP file from ( https://builder.blender.org/download/daily/ ) and extract it on my laptop I open the extracted folder and click on either (blender.exe) or (blender-launcher.exe) Blender then seems to start the loading screen then crashes. No error message or anything. Bug reports are attached.
Ahmed added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-06-09 23:00:33 +02:00
Member

Hi, thanks for the report. Did not spot any changes on shader side between 1c92d26bfc8d-ffa363355db4.
Did you install any community add-on by the time?
Does this happen if you launch blender from blender_factory_startup.cmd batch file?

version: '4.6.0 NVIDIA 391.35'

GPU and driver version version are bit old. Could you update GPU drivers then check the problem again?: https://docs.blender.org/manual/en/dev/troubleshooting/gpu/windows/nvidia.html

Hi, thanks for the report. Did not spot any changes on shader side between `1c92d26bfc8d-ffa363355db4`. Did you install any community add-on by the time? Does this happen if you launch blender from `blender_factory_startup.cmd` batch file? > version: '4.6.0 NVIDIA 391.35' GPU and driver version version are bit old. Could you update GPU drivers then check the problem again?: https://docs.blender.org/manual/en/dev/troubleshooting/gpu/windows/nvidia.html
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-06-10 08:31:21 +02:00
Author

Hi, thanks for the report. Did not spot any changes on shader side between 1c92d26bfc8d-ffa363355db4.
Did you install any community add-on by the time?
Does this happen if you launch blender from blender_factory_startup.cmd batch file?

version: '4.6.0 NVIDIA 391.35'

GPU and driver version version are bit old. Could you update GPU drivers then check the problem again?: https://docs.blender.org/manual/en/dev/troubleshooting/gpu/windows/nvidia.html

I have a couple of community add-ons from before moving to [extensions] and some [Extensions] I installed after that.

And yes, it happens if I launch blender from blender_factory_startup.cmd batch file.

I re-installed the driver, since it's the last available one.

> Hi, thanks for the report. Did not spot any changes on shader side between `1c92d26bfc8d-ffa363355db4`. > Did you install any community add-on by the time? > Does this happen if you launch blender from `blender_factory_startup.cmd` batch file? > > > version: '4.6.0 NVIDIA 391.35' > > GPU and driver version version are bit old. Could you update GPU drivers then check the problem again?: https://docs.blender.org/manual/en/dev/troubleshooting/gpu/windows/nvidia.html I have a couple of community add-ons from before moving to [extensions] and some [Extensions] I installed after that. And yes, it happens if I launch blender from blender_factory_startup.cmd batch file. I re-installed the driver, since it's the last available one.
Member

Thanks, I'll check with others to see if they have similar hardware to test the crash

Thanks, I'll check with others to see if they have similar hardware to test the crash
Pratik Borhade added
Status
Needs Triage
and removed
Status
Needs Information from User
labels 2024-06-10 11:37:32 +02:00
Member

@AhmedNassef hi, does it work with gpu workarounds enabled? For that, launch blender from blender_debug_gpu_glitchworkaround.cmd batch file.

@AhmedNassef hi, does it work with gpu workarounds enabled? For that, launch blender from `blender_debug_gpu_glitchworkaround.cmd` batch file.
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-06-11 06:39:35 +02:00
Author

@AhmedNassef hi, does it work with gpu workarounds enabled? For that, launch blender from blender_debug_gpu_glitchworkaround.cmd batch file.

Still crashes

> @AhmedNassef hi, does it work with gpu workarounds enabled? For that, launch blender from `blender_debug_gpu_glitchworkaround.cmd` batch file. Still crashes
Pratik Borhade added
Status
Needs Triage
and removed
Status
Needs Information from User
labels 2024-06-11 11:29:36 +02:00
Member

@Jeroen-Bakker hi, any idea? Looks hardware/gpu specific

@Jeroen-Bakker hi, any idea? Looks hardware/gpu specific
Member

It seems to fail at the first shader blender uses (icon rendering). Not sure why. The message seems to point to a compiler bug.

  • I will closely look at the differences between the mentioned hashes.
  • Will try to install an older NVIDIA driver and see if I can reproduce the issue. IIRC we have a 500 series here.

Is it possible to start blender from the command line with the --debug-gpu-compile-shaders option. This will compile most shaders and report which one are failing, perhaps that leads to an work-around

It seems to fail at the first shader blender uses (icon rendering). Not sure why. The message seems to point to a compiler bug. - I will closely look at the differences between the mentioned hashes. - Will try to install an older NVIDIA driver and see if I can reproduce the issue. IIRC we have a 500 series here. Is it possible to start blender from the command line with the `--debug-gpu-compile-shaders` option. This will compile most shaders and report which one are failing, perhaps that leads to an work-around
Member

I am able to reproduce using the same driver. Seems like a driver bug.

I am able to reproduce using the same driver. Seems like a driver bug.
Member

Validated that Blender works with these drivers.

Validated that Blender works with these drivers.
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2024-06-11 14:37:56 +02:00
Jeroen Bakker added this to the Viewport & EEVEE project 2024-06-11 20:20:10 +02:00
Jeroen Bakker added this to the 4.2 LTS milestone 2024-06-11 20:20:13 +02:00
Jeroen Bakker self-assigned this 2024-06-11 20:20:19 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#122977
No description provided.